@@ -7,7 +7,7 @@
     <onload>ClearProperty(OSD_Menu,Home)</onload>
     <onunload>ClearProperty(FilePath,home)</onunload>
     <onunload>ClearProperty(OSD_Menu,Home)</onunload>
-    <onunload condition="!String.IsEmpty(Window(Home).Property(TMDbHelper.Path.Current))">RunScript(plugin.video.themoviedb.helper,del_path,call_id=1137)</onunload>
+    <onunload condition="Window.IsVisible(1136)">RunScript(plugin.video.themoviedb.helper,del_path,call_id=1137)</onunload>
     <controls>
 
         <!-- Top Info -->
