@@ -3,6 +3,8 @@
 - Remove extendedinfo completely
 - Update submenu hubs to new widget styles
 - Remove labels from aura showcase views
+- Standardise searchlists to match widgets
+- Add Netflix default search list option
 
 
 0.9.43
